<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">


    <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent">
        <TableRow>
            <TextView android:text="@string/breitengrad" android:layout_column="1" android:id="@+id/textLabelBreite" android:padding="3dip"/>
            <TextView android:text="" android:layout_column="2" android:id="@+id/textViewBreite" android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/laengengrad" android:layout_column="1" android:id="@+id/textLabelLaenge" android:padding="3dip"/>
            <TextView android:text="" android:layout_column="2" android:id="@+id/textViewLaenge" android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/hoehe" android:layout_column="1" android:id="@+id/textLabelHoehe" android:padding="3dip"/>
            <TextView android:text="" android:layout_column="2" android:id="@+id/textViewHoehe" android:padding="3dip"/>
        </TableRow>
    </TableLayout>

    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent"
                  android:layout_weight="0.53">
        <Button android:text="@string/start" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
        <Button android:text="@string/stopp" android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
        <Button android:text="@string/speichern" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>


    </LinearLayout>
    <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1">

    </TableLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show User"
            android:id="@+id/button4" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewUserlist" android:layout_gravity="center_horizontal"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button5" android:layout_gravity="center_horizontal"/>

</LinearLayout>
